--- a/landing/woklanding.css
+++ b/landing/woklanding.css
@@ -1,59 +1,8 @@
+html{
+    margin: 0;
+    padding: 0;
+}
 
 body{ 
     font-family: 'Oswald', sans-serif;
-}
-/* NAVBAR & CONTENT */
-.navbar{
-    height: 200px;
-    width: 100vw;
-}
-
-.page-wrapper{
-    width: 100vw;
-}
-
-.body-container{ 
-    width: 100vw;
-}
-
-.logo{
-    font-family: 'Oswald', sans-serif;
-    font-size: 3em;
-    width: 100vw;
-}
-
-.wok{
-    position: relative;
-    background-color: white;
-    color: red;
-    margin: 0;
-    padding: 10px;
-    top: 0;
-}
-
-.fullstack{
-    position: relative;
-    background: red;
-    color: white;
-    margin: 0;
-    padding: 10px;
-}
-
-.links{
-    position: absolute;
-    display: inline-block;
-    width: px;
-    height: 100px;  
-    margin: 0;
-    padding: 0;
-    font-size: medium;
-    top: 10px;
-    right: 0;
-}
-
-.link-item{
-    width: 80px;
-    background: #cccccc;
-    color: red;
-    padding: 0;
 }
